<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/iv_selected"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:scaleType="centerInside"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/tv_feel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <ImageButton
        android:id="@+id/dial_btn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_twotone_call_24"
        android:contentDescription="@string/dial"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dial"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <ImageButton
        android:id="@+id/web_btn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_baseline_web_24"
        android:contentDescription="@string/visit_web_address"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit_website"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <ImageButton
        android:id="@+id/map_btn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_baseline_map_24"
        android:contentDescription="@string/dial"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_location"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Greeny"
        android:text="@string/create_contact"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />


</LinearLayout>